Fix typos, version, format and improve Makefile

--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,3 +1,7 @@
+* 0.3.3
+
+- Maintenance codebase 
+
 * 0.3.2-1
 - Revision fixup
   + MGL-pax had a regression where @documentation is not exported, we
